<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_login_relative_layout_side"
                android:paddingRight="@dimen/padding_login_relative_layout_side"
                android:paddingTop="@dimen/padding_login_relative_layout_top"
                android:background="@color/colorAccent"
>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_title"
              android:textSize="@dimen/text_size_all_title_medium"
              android:textColor="@color/colorTextLight"
              android:id="@+id/text_register_title"
              android:layout_marginBottom="@dimen/margin_all_blocks"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_first_name_text"
              android:textColor="@color/colorTextLight"
              android:textSize="@dimen/text_size_all_label_medium"
              android:id="@+id/text_register_first_name"
              android:layout_below="@id/text_register_title"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_first_name"
            android:id="@+id/edittext_register_first_name"
            android:layout_marginBottom="@dimen/margin_all_blocks"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:theme="@style/edittext_theme"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_last_name_text"
              android:textColor="@color/colorTextLight"
              android:textSize="@dimen/text_size_all_label_medium"
              android:id="@+id/text_register_last_name_label"
              android:layout_below="@id/edittext_register_first_name"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_last_name_label"
            android:id="@+id/edittext_register_last_name"
            android:layout_marginBottom="@dimen/margin_all_blocks"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:theme="@style/edittext_theme"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_email_text"
              android:textColor="@color/colorTextLight"
              android:textSize="@dimen/text_size_all_label_medium"
              android:id="@+id/text_register_email_label"
              android:layout_below="@id/edittext_register_last_name"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_email_label"
            android:id="@+id/edittext_register_email"
            android:layout_marginBottom="@dimen/margin_all_blocks"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:theme="@style/edittext_theme"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/register_password_text"
              android:textColor="@color/colorTextLight"
              android:textSize="@dimen/text_size_all_label_medium"
              android:id="@+id/text_register_password_label"
              android:layout_below="@id/edittext_register_email"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_password_label"
            android:id="@+id/edittext_register_password"
            android:layout_marginBottom="@dimen/margin_all_blocks"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:theme="@style/edittext_theme"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_register_submit"
            android:text="@string/register_button_create_account"
            android:layout_below="@id/edittext_register_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_style"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:onClick="register"/>
</RelativeLayout>